--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
+* {
+    background-color: #434A54;
+}
+.hero {
+    position: relative;
+    background-color: #434A54;
+}
+.hero-overlay {
+    text-align: center;
+    /* position: absolute; */
+    text-transform: uppercase;
+    z-index: 0;
+    width: 100%;
+}
+h1 {
+    font-size: 6vh;
+    transform: translate(9vw);
+    color: #3BAFDA;
+    font-weight: 700;
+}
+
+.hero-image {
+    display: block;
+    overflow: visible;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    /* z-index: 1; */
+}
+
+
 /* Css:
 Hero has no background color just the logo and title floating at the top Title color: Aqua #3BAFDA
 Background: Dark Gray #434A54
