--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,56 @@
+
+body {
+  background-color: #434A54;
+}
+
 .main-container {
-    background-color: #434A54;
-}
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    align-items: center;
+    justify-content: center;
 
-.hero {
-    position: relative;
+  
 }
+    .hero-img{
+        align-items: flex-start;
+    }
+        #hero-image {
+        overflow: visible;
+            width: 200px;
+            height: inherit;
+            /* z-index: 1; */
+        } 
+    .title{
+        align-items: center;
+        margin-left: -10%;
+    }
+        h1 {
+            text-align: center;
+            font-size: 6vh;
+            font-family: 'Babylonica', cursive;
+            transform: translate(9vw);
+            color: #3BAFDA;
+            font-weight: 700;
+            text-transform: uppercase;
+            /* z-index: 0; */
+            
+        }
 
-.hero-overlay {
-    text-align: center;
-    /* position: absolute; */
-    text-transform: uppercase;
-    z-index: 0;
-    width: 100%;
+ .carousel{
+     display: flex;
+     justify-content: center;
+     
+ }
+
+    .carousel-item {
+        border: solid 5px#967ADC;
+    }
+
+
+#video-container {
+    background-color: #EC87C0;
 }
-h1 {
-    font-size: 6vh;
-    transform: translate(9vw);
-    color: #3BAFDA;
-    font-weight: 700;
-}
-
-.hero-image {
-    /* display: block;
-    overflow: visible;
-    margin-left: auto;
-    margin-right: auto;
-     */
-    /* z-index: 1; */
-}
-
-
 /* Css:
 check, Hero has no background color just the logo and title 
 check,floating at the top Title color: Aqua #3BAFDA
