--- a/css/style.css
+++ b/css/style.css
@@ -3,54 +3,77 @@ body {
   background-color: #434A54;
 }
 
-.main-container {
-    display: flex;
-    flex-direction: row;
-    align-content: flex-start;
+/* container1 */
+.hero-img{
+    align-items: flex-start;
+    } 
+    #hero-img {
+    overflow: visible;
+        width: 200px;
+        height: inherit;
+        z-index: 1;
+    } 
+#title{
+    margin-left: -7em;
     align-items: center;
     justify-content: center;
-
-  
 }
-    .hero-img{
-        align-items: flex-start;
+    h1 {
+        flex: 1;
+        text-align: center;
+        font-size: 6vh;
+        font-family: 'Babylonica', cursive;
+        transform: translate(9vw);
+        color: #3BAFDA;
+        font-weight: 700;
+        text-transform: uppercase;
+        z-index: 0;
+        
     }
-        #hero-image {
-        overflow: visible;
-            width: 200px;
-            height: inherit;
-            /* z-index: 1; */
-        } 
-    .title{
-        align-items: center;
-        margin-left: -10%;
-    }
-        h1 {
-            text-align: center;
-            font-size: 6vh;
-            font-family: 'Babylonica', cursive;
-            transform: translate(9vw);
-            color: #3BAFDA;
-            font-weight: 700;
-            text-transform: uppercase;
-            /* z-index: 0; */
-            
-        }
+/* container2 */
+#rewind{
+   background-color: #4A89DC;
+}
+#play{
+    background-color: #8CC152;
+}
+#pause{
+    background-color: #A0D468;
+}
+#fastForward{
+    background-color: #4A89DC;
+}
 
- .carousel{
-     display: flex;
-     justify-content: center;
-     
- }
-
-    .carousel-item {
+/* container 3 */
+/* carousel 1 */
+    #carousel-item {
         border: solid 5px#967ADC;
     }
 
 
 #video-container {
-    background-color: #EC87C0;
+    background-color: #DA4453;
+    border: solid 5px#967ADC;
 }
+
+/* container 4 */
+#audioLink{
+    background-color: #FC6E51;
+}
+#youtubeLink{
+    background-color: #F6BB42;
+}
+
+.margin{
+    margin-top: 2rem;
+}
+/* carousel 2 */
+
+
+
+
+
+
 /* Css:
 check, Hero has no background color just the logo and title 
 check,floating at the top Title color: Aqua #3BAFDA
