--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,13 +91,14 @@ body {
 
 /* Carousel Button (both carousels */
     .btn{
-        background-color: #8CC152;
+        /* background-color: ; */
         cursor: pointer;
         color: black;
+        width: 100%;
     }
 
     .btn:hover {
-        background-color: #8bc152be;
+        /* background-color: #8CC152 */
     }
 
 
